[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blink-counter"
version = "1.0.0"
description = "Real-time eye blink detection with OpenCV and dlib."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.0.0",
    "opencv-contrib-python>=4.0.0",
    "dlib>=19.0.0",
    "imutils>=0.5.0",
    "scipy>=1.0.0",
    "numpy>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
blink-counter = "blinker.cli:main"

[tool.setuptools.packages.find]
include = ["blinker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
